crates/formatter/tests/snapshots/snapshots__synapse__main__delta__94__03_device_lists_room_timestamp.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2025 Element Creations, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

alter table device_lists_changes_in_room add column inserted_ts bigint;

-- Add a background update to add index
insert into background_updates (ordering, update_name, progress_json)
values (9403, 'device_lists_changes_in_room_inserted_ts_idx', '{}');
